--- a/manifest.yml
+++ b/manifest.yml
@@ -5,11 +5,12 @@
 # To use this file, uncomment the lines you need, and fill in the appropriate information.
 
 
-dependencies:
-  # Pip dependencies on PyPI
-  python:
-    - dotenv
-    - caldav
+ dependencies:
+   # Pip dependencies on PyPI
+   python:
+     - python-dotenv
+     - caldav
+     - icalendar
 
 
 #
