--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ coverage==4.5.4
 coveralls==1.8.2
 cryptography==3.2.1
 cucumber-tag-expressions==3.0.0
+DateTime==4.3
 ddg3==0.6.6
 decorator==4.4.2
 Deprecated==1.2.10
@@ -134,3 +135,4 @@ wrapt==1.12.1
 xmltodict==0.12.0
 xxhash==2.0.0
 zeroconf==0.28.6
+zope.interface==5.2.0
