--- a/settingsmeta.yaml
+++ b/settingsmeta.yaml
@@ -8,10 +8,10 @@ skillMetadata:
           label: Setting Friendly Display Name
           value: ""
           placeholder: demo prompt in the input box
-    - name: Login << Name of another section
+    - name: Caldav
       fields:
         - type: label
-          label: Just a little bit of extra info for the user to understand following settings
+          label: Skill for Calendar-Management
         - name: username
           type: text
           label: Username
@@ -20,3 +20,7 @@ skillMetadata:
           type: password
           label: Password
           value: ""
+        - name: url
+          label: Url
+          type: text
+          value: "https://YOUR.CALENDAR.URL/remote.php/dav"
